--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "NetGuru",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "JWT_SECRET=secret nodemon -x ts-node src/index.ts"
+    "start": "JWT_SECRET=secret nodemon -x ts-node src/index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
