--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "start": "JWT_SECRET=secret nodemon -x ts-node src/index.ts",
+    "start": "nodemon -x ts-node src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
