--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow will install Deno and run tests across stable and nightly builds on Windows, Ubuntu and macOS.
-# For more information see: https://github.com/denolib/setup-deno
 
 name: PR tests
 
@@ -14,7 +7,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest # runs a test on Ubuntu, Windows and macOS
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
