--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "why-is-node-running": "^2.2.0"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
