--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Setup packaged
-        run: npm ci
+        run: npm install
 
       - name: Test
         run: npm test
