--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.3",
     "msw": "^0.26.2",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
@@ -42,6 +43,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
     "moment": "^2.29.1",
+    "mongo-mock": "^4.0.0",
     "mongodb": "^3.6.4",
     "uuid": "^8.3.2"
   }
