--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "NetGuru",
+  "engines": {
+    "node": ">=12"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand",
+    "test:watch": "npm test -- --watch",
     "start": "nodemon -x ts-node src/index.ts",
     "build": "tsc"
   },
